# nrf_accelhid

./: .gitignore  Cargo.toml  build.rs  build.sh  make_uf2.sh  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: dmp_firmware.rs  flash-logger.rs  main.rs  monotonic_nrf52.rs  usb-outputter.rs
src/mpu6050/: dmp_firmware.rs  mod.rs
