[package]
name = "nrf_accelhid"
version = "0.1.0"
authors = ["Erik Tollerud <erik.tollerud@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
#embedded-hal = "0.2.7"
#nrf52840-hal = "0.16.0"
panic-persist = "0.3.0"
panic-halt = "0.2.0"

embassy-executor = { version = "0.1.0", path = "../embassy/embassy-executor", features = ["defmt", "nightly", "integrated-timers"] }
embassy-time = { version = "0.1.0", path = "../embassy/embassy-time", features = ["defmt", "nightly"] }
embassy-nrf = { path = "../embassy/embassy-nrf", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "nightly", "unstable-pac"] }

defmt = "0.3"
defmt-rtt = "0.3"
