[package]
name = "nrf_accelhid"
version = "0.1.0"
authors = ["Erik Tollerud <erik.tollerud@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
#embedded-hal = "0.2.7"
#nrf52840-hal = "0.16.0"
panic-persist = "0.3.0"
panic-halt = "0.2.0"

embassy-executor = { version = "0.1.0", path = "../embassy/embassy-executor", features = ["nightly", "integrated-timers"] }
embassy-time = { version = "0.1.0", path = "../embassy/embassy-time", features = ["nightly"] }
embassy-sync = { version = "0.1.0", path = "../embassy/embassy-sync", features = ["nightly"] }
embassy-nrf = { path = "../embassy/embassy-nrf", features = ["nrf52840", "time-driver-rtc1", "gpiote", "nightly", "unstable-pac", "time"] }

numtoa = "0.2.4"


[[bin]]
name = "flash-logger"
path = "src/flash-logger.rs"

[[bin]]
name = "usb-outputter"
path = "src/usb-outputter.rs"
